--- a/base-app/src/index.html
+++ b/base-app/src/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <title>BaseApp</title>
   <base href="/">
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.scss">
 </head>
 <body>
   <app-root></app-root>
